# NGS-Agent

./: .env.example  README.md  environment.yml  ngs.toml.example  pyproject.toml  worker.py
NGS-Agent-v2/: .env.example  .gitignore  ADVANCED.md  ARCHITECTURE.md  COMPLETION_REPORT.md  DEPLOYMENT_CHECKLIST.md  FINAL_WORK_SUMMARY.md  INSTALL.md  Makefile  QUICKSTART.md  README.md  SUMMARY.md  VERIFICATION_REPORT.md  requirements.txt  test_e2e.py  test_system.py
NGS-Agent-v2/agents/: __init__.py  alignment_agent.py  de_agent.py  qc_agent.py  quantification_agent.py  report_agent.py  trim_agent.py  validation_agent.py
NGS-Agent-v2/config/: EXAMPLES.md  default.yaml  production.yaml  quick_preview.yaml  rna_seq_human.yaml  strict_qc.yaml
NGS-Agent-v2/data/: metadata_template.csv
NGS-Agent-v2/modules/: __init__.py  base_agent.py  config.py  file_manager.py  logging_config.py
NGS-Agent-v2/pipelines/: __init__.py  controller.py
NGS-Agent-v2/scripts/: deseq2_analysis.R  enrichment_analysis.R  install_r_packages.R  quick_test.sh  run_ngs_agent.py  setup.sh
agents/ai_decider/: Dockerfile  main.py
agents/align/: Dockerfile
agents/count/: Dockerfile  main.py
agents/coverage_agent/: Dockerfile  main.py
agents/de/: Dockerfile
agents/ingest/: Dockerfile
agents/qc/: Dockerfile  main.py
agents/report_agent/: Dockerfile  main.py
agents/trim/: Dockerfile  main.py
scripts/: build-agents.sh  install.sh  setup-native.sh
shared/: models.py
src/ngs_agent/: __init__.py
src/ngs_agent/agent/: __init__.py  executor.py  models.py  orchestrator.py  planner.py  reporter.py  types.py  verifier.py
src/ngs_agent/artifacts/: store.py
src/ngs_agent/bioinformatics/: __init__.py
src/ngs_agent/cli/: app.py  (+1 more)
tests/: test_pipeline.py
workflows/: activities.py  pipeline_workflow.py
(+20 files in other folders)
