[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ngs-agent"
version = "0.1.0"
description = "Enterprise-grade, agentic NGS CLI with native-first execution"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "NGS-Agent Maintainers" }
]
keywords = ["ngs", "rnaseq", "bioinformatics", "agentic", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer>=0.12.5",
  "rich>=13.9.4",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.7.1",
  "anthropic>=0.49.0",
  "tenacity>=9.0.0",
  "httpx>=0.28.1",
  "boto3>=1.37.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "platformdirs>=4.3.6",
  "structlog>=24.4.0",
  "orjson>=3.10.15",
  "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
temporal = [
  "temporalio>=1.8.0",
]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.9",
  "mypy>=1.15.0",
]

[project.scripts]
ngs = "ngs_agent.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ngs_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
